# MultiLayerStructuredMatrix

./: .gitmodules  CMakeLists.txt
benchmarks/: CMakeLists.txt
include/mlsm/: BlockMatrix.h  MatrixBase.h  SimpleMatrix.h  api.h  defs.h
include/mlsm/internal/: LineIterator.h  Shape.h  SimpleStorage.h  Size.h  StorageScheme.h
src/: BlockMatrix.cpp  CMakeLists.txt  Matrix.cpp  MatrixBase.cpp  SimpleMatrix.cpp  StorageScheme.cpp
tests/: BlockMatrixTest.cpp  CMakeLists.txt  ShapeTest.cpp  SimpleMatrixTest.cpp  SizeTest.cpp  StorageSchemeTest.cpp  main.cpp
